create option page

--- a/manifest.json
+++ b/manifest.json
@@ -9,5 +9,12 @@
       "js": ["lib/jquery.min.js", "src/script.js"],
       "css": ["css/style.css"]
     }
-  ]
+  ],
+  "permissions": [
+    "storage"
+  ],
+  "options_ui": {
+    "page": "html/option.html",
+    "open_in_tab": false
+  }
 }
